css/admin-theme.css
@import url("https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap");

:root {
  --peacock-green: #376c74;
  --mediterranean-blue: #187e9b;
  --robin-egg: #d9f1f3;
  --wool: #fbfbf6;
  --light-gray: #d4d4d4;
  --darkest-gray: #1f1f1f;
  --gin-font: "DM Mono", monospace;
  --gin-font-size-h1: 1.75rem;
  --gin-font-size-h2: 1.5rem;
  --gin-font-size-h3: 1.25rem;
  --gin-border-m: 0.313rem;
  --gin-bg-app: #fcfefe;
  --gin-bg-app-rgb: rgb(252, 254, 254);
}

:root [data-gin-accent=light_blue] {
  --gin-color-primary-rgb: 55, 108, 116;
  --gin-color-primary-active: var(--peacock-green);
  --gin-color-secondary: var(--mediterranean-blue);
  --gin-color-primary-hover: var(--peacock-green);
  --gin-color-primary-light: var(--robin-egg);
  --gin-border-color-layer: var(--light-gray);
  --gin-bg-layer: var(--wool);
  --gin-dark-gray: var(--darkest-gray);
  --colorGinText: var(--darkest-gray);
  --gin-border-color-table-header: var(--darkest-gray);
}

[data-gin-accent=light_blue] {
  --gin-bg-app: #fcfefe;
  --gin-bg-app-rgb: rgb(252, 254, 254);
}

.gin--dark-mode [data-gin-accent] {
  --gin-color-textLight: var(--wool);
}

.gin--dark-mode [data-gin-accent=light_blue] {
  --gin-color-primary-rgb: 55, 108, 116 !important;
  --gin-color-primary-active: var(--peacock-green) !important;
  --gin-color-secondary: var(--mediterranean-blue) !important;
  --gin-color-primary-hover: var(--peacock-green) !important;
  --gin-color-primary-light: var(--robin-egg) !important;
  --gin-border-color-layer: var(--light-gray) !important;
  --gin-bg-layer: var(--darkest-gray) !important;
  --gin-border-color-table-header: var(--darkest-gray) !important;
  --gin-bg-input: #fff !important;
  --gin-border-color-form-element: var(--light-gray) !important;
  --gin-bg-app: #353535;
  --gin-color-text-light: var(--light-gray);
  --gin-color-primary-light-active: var(--robin-egg);
  --gin-icon-color: var(--light-gray);
  --gin-bg-layer2: #fff;
  --gin-bg-layer3: #fff;
  --gin-color-button-text: #fff;
}

/* affect admin paths only */
:root .path-admin h1,
:root .path-admin h2 {
  font-weight: 600;
}


/* Modal */
.ui-widget-overlay {
  background: var(--gin-color-primary) !important;
}

.ui-dialog-titlebar {
  display: flex;
  align-items: center;
  background: var(--gin-color-primary-active) !important;
}

[data-gin-accent="light_blue"] .ws-lb-link__label {
  background: var(--wool) !important;
}

[data-gin-accent="light_blue"] .ui-dialog-titlebar .ui-dialog-title {
  color: var(--wool) !important;
}

[data-gin-accent="light_blue"] .ui-dialog .ui-dialog-titlebar-close .ui-icon-closethick {
  background: var(--wool) !important;
}

.gin--dark-mode a.cke_path_item:hover, 
.gin--dark-mode a.cke_path_item:focus, 
.gin--dark-mode a.cke_path_item:active {
  color: var(--darkest-gray) !important;
}

.gin--dark-mode .glb-form-element {
  --gin-color-text: var(--darkest-gray);
  background-color: var(--wool) !important;
}

.gin--dark-mode .ui-widget-overlay {
  background: var(--gin-color-primary) !important;
  filter: brightness(50%);
}

.gin--dark-mode .ws-lb-link {
  border-color: var(--gin-color-primary);
}
.gin--dark-mode .ws-lb-link__label {
  background: var(--darkest-gray);
}

.gin--dark-mode .ui-dialog-titlebar {
  background: var(--gin-color-primary-active) !important;
}

.gin--dark-mode .ui-dialog-titlebar .ui-dialog-title {
  color: var(--darkest-gray) !important;
}

.gin--dark-mode .ui-dialog .ui-dialog-titlebar-close .ui-icon-closethick {
  background: var(--darkest-gray) !important;
}

.gin-secondary-toolbar--frontend {
  background-color: var(--gin-bg-layer);
}

.gin--dark-mode [data-gin-accent="light_blue"] .ws-lb-link__label {
  background: var(--wool) !important;
}

.gin--dark-mode [data-gin-accent="light_blue"] .ui-dialog-titlebar .ui-dialog-title {
  color: var(--wool) !important;
}

.gin--dark-mode [data-gin-accent="light_blue"] .ui-dialog .ui-dialog-titlebar-close .ui-icon-closethick {
  background: var(--wool) !important;
}

.gin--dark-mode [data-gin-accent=light_blue] .ui-widget-overlay {
  background: var(--peacock-green) !important;
}

.gin--dark-mode [data-gin-accent=light_blue] .ui-dialog-titlebar {
  background: var(--mediterranean-blue) !important;
}

[data-gin-accent=light_blue] .ui-widget-overlay {
  background: var(--peacock-green) !important;
}

[data-gin-accent=light_blue] .ui-dialog-titlebar {
  background: var(--mediterranean-blue) !important;
}


.toolbar-menu-administration
  > .toolbar-menu
  > .menu-item:hover
  > .toolbar-icon::before,
.toolbar-menu-administration
  > .toolbar-menu
  > .menu-item:hover
  > .toolbar-box
  > a.toolbar-icon::before,
.toolbar-menu-administration
  > .toolbar-menu
  > .menu-item
  > .toolbar-icon:focus::before,
.toolbar-menu-administration
  > .toolbar-menu
  > .menu-item.menu-item--active-trail
  > .toolbar-icon::before,
.toolbar-menu-administration
  > .toolbar-menu
  > .menu-item.menu-item--active-trail:hover
  > .toolbar-icon::before,
.toolbar-menu-administration
  > .toolbar-menu
  > .menu-item.menu-item--active-trail
  > .toolbar-box
  > a.toolbar-icon::before {
  z-index: 1;
}

.toolbar-menu-administration
  > .toolbar-menu
  > .menu-item.menu-item--active-trail
  > .toolbar-icon::after,
.toolbar-menu-administration
  > .toolbar-menu
  > .menu-item.menu-item--active-trail
  > .toolbar-box
  > a.toolbar-icon::after,
.toolbar-menu-administration
  > .toolbar-menu
  > .menu-item
  > .toolbar-icon.is-active::after {
  background-color: var(--gin-color-primary-light) !important;
}


.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab:hover .trigger::before, 
.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab:focus .trigger::before {
  background-color: var(--gin-color-primary) !important;
}

.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab > .toolbar-icon-edit.toolbar-item:hover 
.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab > .toolbar-icon-edit.toolbar-item:focus {
  background-color: var(--wool);
}

.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab:hover .trigger {
  color: var(--gin-color-primary) !important;
}

.is-horizontal .tabs__link:hover,
.is-horizontal .tabs__link:focus,
.horizontal-tabs ul.horizontal-tabs-list li.horizontal-tab-button a:hover,
.horizontal-tabs ul.horizontal-tabs-list li.horizontal-tab-button a:focus {
  background: var(--gin-color-primary-light);
}

.form-element {
  border-radius: 0.625rem !important;
}

.block-system > .views-form [data-drupal-selector*="edit-header"],
.view-content .views-form [data-drupal-selector*="edit-header"] {
  background-color: transparent !important;
}

.admin-item .admin-item__link:hover,
.admin-item .admin-item__link:focus {
  background: rgba(var(--gin-color-primary-rgb), 0.15) !important;
}

.gin-secondary-toolbar
  .toolbar-secondary
  .toolbar-bar
  .toolbar-tab
  .toolbar-tray
  a:hover,
.gin-secondary-toolbar
  .toolbar-secondary
  .toolbar-bar
  .toolbar-tab
  .toolbar-tray
  a:active,
table tr:hover,
table .draggable-table.tabledrag-disabled tr:hover {
  --gin-color-button-text: var(--gin-color-primary); 
  color: var(--wool);
}

#block-atomic-local-tasks ul:not(.contextual-links) {
  list-style: none;
  display: flex;
}

/* Layout styles */

/* override button font  */
.glb-sidebar .form-actions,
.glb-button,
.layout-builder__link,
.glb-form-wrapper,
.glb-sidebar__content {
  font-family: var(--gin-font) !important;
}

.glb-button,
.inline-block-create-button,
.layout-builder__link--add,
.inline-block-create-button:not(:focus),
.layout-builder__link--add:not(:focus),
.form-actionsÂ .glb-button,
.form-actionsÂ .inline-block-create-button,
.form-actionsÂ .layout-builder__link--add,
.glb-action-link--icon-trash.glb-action-link,
.meta-sidebar__trigger.is-active,
.meta-sidebar__close.is-active {
  background-color: var(--gin-color-primary-light) !important;
}

.glb-button,
.inline-block-create-button,
.layout-builder__link--add,
.glb-button:not(:focus),
.inline-block-create-button:not(:focus),
.layout-builder__link--add:not(:focus),
.form-actionsÂ .glb-button,
.form-actionsÂ .inline-block-create-button,
.form-actionsÂ .layout-builder__link--add,
.glb-action-link--icon-trash.glb-action-link {
  border-radius: 2.5rem !important;
}

.gin--dark-mode .layout-builder .layout-builder__link--add {
  background-color: var(--gin-color-primary) !important;
  color: var(--darkest-gray) !important;
}

.gin--dark-mode [data-gin-accent="light_blue"] .layout-builder .layout-builder__link--add {
  color: var(--wool) !important;
}

.glb-button:not(:focus) {
  filter: none !important;
  box-shadow: none !important;
}

.gin-secondary-toolbar__layout-container *:focus {
  box-shadow: 0 0 0 3px #d4d4d4 !important;
}

.meta-sidebar__trigger,
.meta-sidebar__close {
  background-color: var(--gin-color-primary-light);
}

.meta-sidebar__trigger::before,
.meta-sidebar__close::before {
  background-color: var(--gin-color-primary);
}

.glb-button, 
.inline-block-create-button, 
.layout-builder__link--add,
.layout-builder__link {
  font-family: var(--gin-font);
}

.layout-builder__link--configure {
  --gin-border-color-form-element: var(--darkest-gray); 
}
.layout-builder__link--add-section-to-library,
.layout-builder__link--remove {
  --gin-border-color-form-element: var(--darkest-gray); 
}

